ags (0.7.74)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_midi_buffer_util_put_varlength() to encode multi-byte properly
	* reverted AgsThread frequency
	* added additional parameter to ags_ladspa_manager.c to pass instance
	* added additional parameter to ags_dssi_manager.c to pass instance
	* added additional parameter to ags_lv2_manager.c to pass instance
	* added additional parameter to ags_lv2ui_manager.c to pass instance
	* improved AgsFFPlayer to resize audio channels
	* fixed relevant clang scan-build errors

ags (0.7.73)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed removed types of libags_gui.types of gtkdoc
	* fixed return value to be void * of ags_stream_alloc()
	* fixed ags_audio_set_pads() to shrink correctly
	* improved ags_recycling_create_audio_signal_with_frame_count() to reduce overhead
	* improved JACK synchronization

ags (0.7.72)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed configuration

ags (0.7.71)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore JACK from file

ags (0.7.70)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed most compiler warnings

ags (0.7.69)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes to API removed non-existing symbols and alike
	* added symbols file libags.sym, libags_audio.sym and libags_gui.sym

ags (0.7.69)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed stop all soundcard threads because only one was stopped

ags (0.7.68)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed close JACK client while ags_application_context_quit()
	* fixed configure.ac to check for atk-1.0 with AC_CHECK_LIB
	* fixed add/remove soundcards using AgsAudioPreferences
	* modified on file open failure to call ags_application_context_quit() instead of exit(-1) because JACK needs clean-up